--- a/pages/assets/style/assignment.css
+++ b/pages/assets/style/assignment.css
@@ -258,3 +258,128 @@ button:hover{
         cursor: pointer;
     }
 }
+
+/*================================== 320 ->Mobile -S ==================================*/
+@media all and (width: 320px) {
+    /*PROJECTS*/
+    #proTopic {
+        display: inline-block;
+        position: absolute;
+        width: 96px;
+        height: 126px;
+        left: 17px;
+        top: 9px;
+        font-family: 'Arial';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 15px;
+        line-height: 126px;
+        color: #FFFFFF;
+        opacity: 0.4;
+    }
+
+    main > section {
+        height: 1950px;
+        /*background-color: #00F461;*/
+    }
+
+    /*project section grid*/
+    #projectSect {
+        /*border: 2px solid black;*/
+        position: relative;
+        top: 235px;
+        height: 1715px;
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+        gap: 50px;
+        padding-left: 45px;
+    }
+
+
+    #projectSect > div {
+        background: linear-gradient(to bottom,#FFFFFF,#8a0583);
+        box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+        backdrop-filter: blur(5px);
+        -webkit-backdrop-filter: blur(5px);
+        border: 1px solid rgba(45, 10, 81, 0.32);
+        width: 229px;
+        height: 380px;
+    }
+
+    h2 {
+        position: relative;
+        width: 236px;
+        height: 126px;
+        left: 14px;
+        top: -60px;
+        font-family: 'Arial';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 35px;
+        line-height: 126px;
+        color: #8a0583;
+    }
+
+    img {
+        position: relative;
+        width: 212px;
+        height: 280px;
+        top: -94px;
+        left: 9px;
+    }
+
+
+    .As {
+        position: absolute;
+        width: 212px;
+        height: 282px;
+        top: 89px;
+        left: 9px;
+        background-color: #1E17175E;
+        opacity: 0;
+    }
+
+
+    p {
+        position: relative;
+        top: 41px;
+        left: 18px;
+        width: 175px;
+        font-size: 15px;
+        font-family: Arial;
+        color: #FFFFFF;
+        text-align: center;
+        line-height: 20px;
+        font-style: normal;
+        font-weight: 510;
+    }
+
+    button {
+        position: relative;
+        top: 51px;
+        left: 64px;
+        width: 88px;
+        height: 33px;
+        opacity: 100%;
+        border-radius: 15px;
+        font-family: Arial;
+    }
+
+    button:hover {
+        background-color: #701C7D;
+        font-weight: bold;
+        color: white;
+        box-shadow: 0px 1px 8px 3px white;
+        border: 3px solid #701C7D;
+        opacity: 100%;
+    }
+
+    As:hover {
+        opacity: 100%;
+        transition-delay: 0s;
+        transition-property: all;
+        transition-duration: 0.5s;
+        cursor: pointer;
+    }
+}
