--- a/pages/assets/style/assignment.css
+++ b/pages/assets/style/assignment.css
@@ -479,7 +479,7 @@ button:hover{
         width: 207px;
         font-size: 15px;
         font-family: Arial;
-        color: #FFFFFF;
+        color: #8a0583;
         text-align: center;
         line-height: 20px;
         font-style: normal;
