--- a/assets/style/styles.css
+++ b/assets/style/styles.css
@@ -13,8 +13,6 @@
     text-decoration: none;
     box-sizing: border-box;
     scroll-behavior: smooth;
-    background: black;
-
 
 }
 /* scroll bar */
@@ -29,7 +27,7 @@
 }
 header {
     position: fixed;
-    background: #000000;
+    background: #ECF0F3;
     width: 100%;
     top: 0;
     height: 73px;
@@ -76,7 +74,7 @@ header {
     line-height: 20px;
     text-decoration: none;
     transition: 0.3s all;
-    color: white;
+    color: black;
 }
 
 .menu ul li a:hover {
@@ -123,7 +121,7 @@ main {
 
 main > section:nth-child(1) {
     position: relative;
-    background: #000000;
+    background-image: url("../image/Home Other HD Wallpapers Green Purple White Simple Background.jpg");
     width: 100%;
 }
 
@@ -142,7 +140,7 @@ main > section:nth-child(1) > section > div:first-child > aside:nth-child(1) > h
     font-size: 31px;
     margin-top: 0;
     margin-bottom: 0;
-    color: #FFFFFF;
+    color: #000000;
 }
 /* web designer...*/
 main > section:nth-child(1) > section > div:first-child > aside:nth-child(1) > h1:nth-child(2) {
@@ -156,11 +154,11 @@ main > section:nth-child(1) > section > div:first-child > aside:nth-child(1) > h
 main > section:nth-child(1) > section > div:first-child > aside:nth-child(1) > h1:nth-child(2) > span {
     font-family: Poppins;
     font-size: 30px;
-    color: #FFFFFF;
+    color: #000000;
 }
 /* s */
 main > section:nth-child(1) > section > div:first-child > aside:nth-child(1) > h1:nth-child(3) {
-    font-family: "Poppins" ;
+    font-family: "Roboto", sans-serif;
     font-size: 60px;
     color: #7ecb79;
     margin-top: 16px;
@@ -169,7 +167,7 @@ main > section:nth-child(1) > section > div:first-child > aside:nth-child(1) > h
 }
 /* rest of the name */
 main > section:nth-child(1) > section > div:first-child > aside:nth-child(1) > h1:nth-child(3) > span {
-    font-family: "Comic Sans MS";
+    font-family: "Roboto", sans-serif;
     font-size: 58px;
     color: #8a0583;
 }
@@ -239,8 +237,8 @@ main > section:nth-child(1) > section > div:first-child > aside:nth-child(1) > s
 main > section:nth-child(1) > section > div:first-child > aside:nth-child(1) > section:nth-child(5) > nav > div {
     width: 60px;
     height: 60px;
-    background: black;
-    box-shadow: -23px -23px 45px #000000, 28px 28px 50px rgba(13, 39, 80, 0.16);
+    background: rgba(255, 240, 243, 0.85);
+    box-shadow: -23px -23px 45px #FFFFFF, 28px 28px 50px rgba(13, 39, 80, 0.16);
     border-radius: 15px;
 }
 /* button background */
@@ -297,7 +295,7 @@ main > section:first-child > section > div:first-child > div:nth-child(3) {
 
 /* home image */
 main > section:first-child > section > div:first-child > aside:nth-child(2) > div:first-child {
-    background: url(../image/1Kte.gif);
+
     width: 400px;
     height: 400px;
     background-size: cover;
@@ -424,7 +422,7 @@ main > section:nth-child(2) > section:first-child > h1::before {
     display: block;
     width: 120px;
     height: 2px;
-    background: #000000;
+    background: #ddd;
     bottom: 2px;
     left: calc(50% - 60px);
     border-radius: 2px;
@@ -449,7 +447,7 @@ main > section:nth-child(2) > section:nth-child(3) > div:first-child > aside:nth
     line-height: 52px;
     margin-top: 0;
     margin-bottom: 24px;
-    color: #7ecb79;
+    color: #8a0583;
 }
 /*
 * introducing description in about section
@@ -511,17 +509,16 @@ main > section:nth-child(2) > section:nth-child(3) > div:first-child > aside:nth
 
 
 #education {
-   /* --color: rgba(30, 30, 30);
-    --bgColor: rgba(245, 245, 245);*/
+    --color: rgba(30, 30, 30);
+    --bgColor: rgb(238, 238, 238);
     min-height: 100vh;
     display: grid;
     align-content: center;
     gap: 2rem;
     padding: 2rem;
     font-family: "Poppins", sans-serif;
- /*   color: var(--color);
-    background: var(--bgColor);*/
-    background: black;
+    color: var(--color);
+    background: var(--bgColor);
 }
 .title{
     text-align: center;
@@ -542,7 +539,8 @@ main > section:nth-child(2) > section:nth-child(3) > div:first-child > aside:nth
 }*/
 .eduTitle h1{
     text-align: center;
-    color: #FFFFFF;
+    font-size: 50px;
+
 }
 
 .eduMenu{
@@ -611,7 +609,6 @@ main > section:nth-child(2) > section:nth-child(3) > div:first-child > aside:nth
     aspect-ratio: 1;
     background: var(--accent-color);
     background-image: linear-gradient(rgba(0, 0, 0, 0.2) 100%, transparent);
-
     position: absolute;
     top: 100%;
 
@@ -625,11 +622,11 @@ main > section:nth-child(2) > section:nth-child(3) > div:first-child > aside:nth
     position: absolute;
     width: 2rem;
     aspect-ratio: 1;
- /*  background: var(--bgColor);*/
+    background: var(--bgColor);
     border: 0.3rem solid var(--accent-color);
     border-radius: 50%;
     top: 50%;
-    background: #000000;
+
     transform: translate(50%, -50%);
     right: calc(100% + var(--col-gap) + var(--line-w) / 2);
 }
@@ -637,10 +634,9 @@ main > section:nth-child(2) > section:nth-child(3) > div:first-child > aside:nth
 /* title descr */
 .eduMenu li .title,
 .eduMenu li .descr {
-  /*  background: var(--bgColor);*/
+    background: var(--bgColor);
     position: relative;
     padding-inline: 1.5rem;
-    background: black;
 }
 .eduMenu li .title {
     overflow: hidden;
@@ -714,8 +710,7 @@ main > section:nth-child(2) > section:nth-child(3) > div:first-child > aside:nth
     text-align: right;
 }
 .credits a {
-   /* color: var(--color);*/
-    color: #FFFFFF;
+    color: var(--color);
 }
 
 /* skill */
@@ -747,7 +742,6 @@ main > section:nth-child(2) > section:nth-child(3) > div:first-child > aside:nth
 }
 /*----------------------------------------------------------------------------------*/
 /* project section */
-
 #projectsSectionMainParent {
 
     background-color: #eeeeee;
@@ -762,24 +756,9 @@ main > section:nth-child(2) > section:nth-child(3) > div:first-child > aside:nth
     color: black;
     font-family: "Roboto", sans-serif;
     font-weight: 700;
-    font-size: 2rem;
+    font-size: 50px;
 }
 
-#projectsSectionMainParent #subHeading {
-    color: black;
-    font-family: "Inter", sans-serif;
-    font-weight: 200;
-    line-height: 0.5;
-    font-size: 0.6rem;
-}
-
-#categoryParent a {
-    color: #3d3d3d;
-    margin: 2rem 1rem;
-    display: inline-block;
-    text-decoration: none;
-    cursor: pointer;
-}
 
 #categoryParent a:hover,
 #categoryParent a:focus,
@@ -924,7 +903,7 @@ main > section:nth-child(5) {
     position: relative;
     top: 0;
     width: 100%;
-    background: #ECF0F3;;
+    background: #eeeeee;;
 }
 
 /**
