--- a/assets/style/styles.css
+++ b/assets/style/styles.css
@@ -27,7 +27,7 @@
 }
 header {
     position: fixed;
-    background: #ECF0F3;
+    background: #FFFFFF;
     width: 100%;
     top: 0;
     height: 73px;
@@ -74,7 +74,7 @@ header {
     line-height: 20px;
     text-decoration: none;
     transition: 0.3s all;
-    color: black;
+    color: #000000;
 }
 
 .menu ul li a:hover {
@@ -113,8 +113,9 @@ header {
 /* main section */
 main {
     position: relative;
-    margin-top: 73px;
+    margin-top: 75px;
     width: 100%;
+
 }
 
 /*  home section */
@@ -123,6 +124,7 @@ main > section:nth-child(1) {
     position: relative;
     background-image: url("../image/Home Other HD Wallpapers Green Purple White Simple Background.jpg");
     width: 100%;
+    height: 80vh;
 }
 
 
@@ -133,6 +135,8 @@ main > section:nth-child(1) > section > div:first-child > aside:nth-child(1) {
     position: relative;
     display: flex;
     flex-direction: column;
+    width: max-content;
+    margin-top: 50px ;
 }
 /* Hello */
 main > section:nth-child(1) > section > div:first-child > aside:nth-child(1) > h3:first-child {
@@ -141,26 +145,24 @@ main > section:nth-child(1) > section > div:first-child > aside:nth-child(1) > h
     margin-top: 0;
     margin-bottom: 0;
     color: #000000;
+    text-align: center;
 }
 /* web designer...*/
 main > section:nth-child(1) > section > div:first-child > aside:nth-child(1) > h1:nth-child(2) {
-    font-family: Poppins;
-    font-size: 20px;
+    font-family: "Calibri Light";
+    font-size: 25px;
     margin-top: 16px;
     margin-bottom: 0;
-    color: #909597;
+    color: #F9FAFB;
+    text-shadow: 5px 10px 6px rgba(0, 0, 0, 0.9);
+    text-align: center;
 }
-/* i m */
-main > section:nth-child(1) > section > div:first-child > aside:nth-child(1) > h1:nth-child(2) > span {
-    font-family: Poppins;
-    font-size: 30px;
-    color: #000000;
-}
+
 /* s */
 main > section:nth-child(1) > section > div:first-child > aside:nth-child(1) > h1:nth-child(3) {
     font-family: "Roboto", sans-serif;
-    font-size: 60px;
-    color: #7ecb79;
+    font-size: 80px;
+    color: #32023d;
     margin-top: 16px;
     margin-bottom: 16px;
     text-shadow: 5px 10px 6px rgba(0, 0, 0, 0.1);
@@ -168,8 +170,8 @@ main > section:nth-child(1) > section > div:first-child > aside:nth-child(1) > h
 /* rest of the name */
 main > section:nth-child(1) > section > div:first-child > aside:nth-child(1) > h1:nth-child(3) > span {
     font-family: "Roboto", sans-serif;
-    font-size: 58px;
-    color: #8a0583;
+    font-size: 60px;
+    color: #ffffff;
 }
 
 .typed-cursor {
@@ -184,7 +186,8 @@ main > section:nth-child(1) > section > div:first-child > aside:nth-child(1) > b
     position: relative;
     width: 198px;
     height: 50px;
-    background-color: #7ecb79;
+    background-color: transparent;
+    border: 2px solid #8a0583;
     border-radius: 40px;
     box-shadow: 28px 28px 50px rgba(13, 39, 80, 0.36);
     font-family: 'Ubuntu', sans-serif;
@@ -192,9 +195,10 @@ main > section:nth-child(1) > section > div:first-child > aside:nth-child(1) > b
     text-align: left;
     padding-left: 25px;
     font-size: 20px;
-    color: #FFFFFF;
+    color: #8a0583;
     cursor: pointer;
-    border-width: 0;
+    opacity: 75%;
+
 }
 /* button arrow */
 main > section:nth-child(1) > section > div:first-child > aside:nth-child(1) > button:nth-child(4) > div {
@@ -237,8 +241,8 @@ main > section:nth-child(1) > section > div:first-child > aside:nth-child(1) > s
 main > section:nth-child(1) > section > div:first-child > aside:nth-child(1) > section:nth-child(5) > nav > div {
     width: 60px;
     height: 60px;
-    background: rgba(255, 240, 243, 0.85);
-    box-shadow: -23px -23px 45px #FFFFFF, 28px 28px 50px rgba(13, 39, 80, 0.16);
+    background: #eeeeee;
+    box-shadow: -5px -10px 10px #000000, 10px 10px 10px rgba(13, 39, 80, 0.16);
     border-radius: 15px;
 }
 /* button background */
@@ -264,44 +268,7 @@ main > section:nth-child(1) > section > div:first-child > aside:nth-child(1) > s
     color: #8a0583 !important;
 }
 
-/**
-* first shape in home section
-*/
-main > section:first-child > section > div:first-child > div:first-child {
-    box-sizing: border-box;
-    position: absolute;
-    width: 34px;
-    height: 34px;
-    left: 138px;
-    top: 92px;
-    border: 7px solid rgba(255, 165, 0, 0.52);
-    transform: matrix(0.6, 0.8, -0.79, 0.6, 0, 0);
-}
 
-/**
-* second shape in home section
-*/
-main > section:first-child > section > div:first-child > div:nth-child(3) {
-    box-sizing: border-box;
-    border-radius: 100%;
-    position: absolute;
-    width: 20px;
-    height: 20px;
-    left: 722px;
-    top: 160px;
-    border: 6px solid rgba(255, 165, 0, 0.52);
-}
-
-
-/* home image */
-main > section:first-child > section > div:first-child > aside:nth-child(2) > div:first-child {
-
-    width: 400px;
-    height: 400px;
-    background-size: cover;
-    position: relative;
-    bottom: 18px;
-}
 
 
 main > section:first-child > section:first-child {
