--- a/assets/style/styles.css
+++ b/assets/style/styles.css
@@ -826,348 +826,380 @@ i.fab {
 }
 
 /* skill responsive */
+/*----------------------------------------------------------------------------------*/
+/* project section */
+#projectsSectionMainParent {
 
-@media screen and (max-width: 1024px){
-    .experience__content {
-        padding: 1rem;
-    }
+    background-color: #eeeeee;
+    padding: 3rem 3rem 5rem 3rem;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    position: relative;
 }
-    @media screen and (max-width: 600px){
-        .experience__container {
-            gap: 1rem;
-        }
-    }
-        @media screen and (max-width: 1024px){
-            .experience__container {
-                grid-template-columns: 1fr;
-            }
-        }
-@media screen and (max-width: 600px) {
-    .experience__container > div {
-        padding: 2rem 1rem;
-        width: 100%;
-    }
 
-    @media screen and (max-width: 1024px) {
-        .experience__container > div {
-            margin: 0 auto;
-            padding: 2rem;
-            width: 80%;
-        }
-    }
-    /*----------------------------------------------------------------------------------*/
-    /* project section */
-    #projectsSectionMainParent {
-
-        background-color: #eeeeee;
-        padding: 3rem 3rem 5rem 3rem;
-        display: flex;
-        align-items: center;
-        flex-direction: column;
-        position: relative;
-    }
-
-    #projectsSectionMainParent #mainHeading {
-        color: black;
-        font-family: "Roboto", sans-serif;
-        font-weight: 700;
-        font-size: 50px;
-    }
+#projectsSectionMainParent #mainHeading {
+    color: black;
+    font-family: "Roboto", sans-serif;
+    font-weight: 700;
+    font-size: 50px;
+}
 
 
-    #categoryParent a:hover,
-    #categoryParent a:focus,
-    #categoryParent a.active {
-        color: white;
-        transition: all 400ms;
-    }
+#categoryParent a:hover,
+#categoryParent a:focus,
+#categoryParent a.active {
+    color: white;
+    transition: all 400ms;
+}
 
-    #projectItemsContainer {
-        margin: auto 6rem;
-        width: 85%;
-        background-color: #eeeeee;
-        display: flex;
-        flex-direction: row;
-        flex-wrap: nowrap;
-        overflow-x: scroll;
-        scroll-behavior: smooth;
-    }
+#projectItemsContainer {
+    margin: auto 6rem;
+    width: 85%;
+    background-color: #eeeeee;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    overflow-x: scroll;
+    scroll-behavior: smooth;
+}
 
-    #projectItemsContainer::-webkit-scrollbar {
-        width: 0px;
-    }
+#projectItemsContainer::-webkit-scrollbar {
+    width: 0px;
+}
 
-    .projectItem {
-        width: 300px;
-        height: 200px;
-        margin-right: 1rem;
-        border-radius: 15px;
-        overflow: hidden;
-        position: relative;
-        flex-shrink: 0;
-    }
+.projectItem {
+    width: 300px;
+    height: 200px;
+    margin-right: 1rem;
+    border-radius: 15px;
+    overflow: hidden;
+    position: relative;
+    flex-shrink: 0;
+}
 
-    .iconsParent {
-        width: 100%;
-        overflow: hidden;
-    }
+.iconsParent {
+    width: 100%;
+    overflow: hidden;
+}
 
-    .iconsParent img {
-        width: 120%;
-        transform: scale(1.2);
-    }
+.iconsParent img {
+    width: 120%;
+    transform: scale(1.2);
+}
+/* project hover css */
+.desc {
+    background-color: #7ecb79;
+    z-index: 2;
+    color: white;
+    position: absolute;
+    top: 0;
+    width: 300px;
+    height: 200px;
+    text-align: center;
+    padding: 1rem;
+    opacity: 0;
+}
 
-    /* project hover css */
-    .desc {
-        background-color: #7ecb79;
-        z-index: 2;
-        color: white;
-        position: absolute;
-        top: 0;
-        width: 300px;
-        height: 200px;
-        text-align: center;
-        padding: 1rem;
-        opacity: 0;
-    }
+.desc:hover {
+    opacity: 1;
+    transition: all 300ms;
+}
 
-    .desc:hover {
-        opacity: 1;
-        transition: all 300ms;
-    }
+.desc>span {
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-size: 1.2rem;
+    text-shadow: 1px 1px 5px #000;
+}
 
-    .desc > span {
-        font-family: "Roboto", sans-serif;
-        font-weight: 500;
-        font-size: 1.2rem;
-        text-shadow: 1px 1px 5px #000;
-    }
+.desc p{
+    color: white;
+    text-align: center;
+    font-size: 0.9rem;
+    font-family: 'Poppins',sans-serif;
+    font-weight: 400;
+    margin-bottom: 0.3rem;
+}
 
-    .desc p {
-        color: white;
-        text-align: center;
-        font-size: 0.9rem;
-        font-family: 'Poppins', sans-serif;
-        font-weight: 400;
-        margin-bottom: 0.3rem;
-    }
+.desc hr{
+    opacity: 0.5;
+    background-color: white;
+    height: 1px;
+    width: 50%;
+    margin: 0.1rem auto !important;
+}
 
-    .desc hr {
-        opacity: 0.5;
-        background-color: white;
-        height: 1px;
-        width: 50%;
-        margin: 0.1rem auto !important;
-    }
+.desc img {
+    width: 40px;
+}
 
-    .desc img {
-        width: 40px;
-    }
+.desc img:hover,
+.desc img:focus {
+    transform: rotateZ(360deg);
+    transition: all 500ms;
+    cursor: pointer;
+}
 
-    .desc img:hover,
-    .desc img:focus {
-        transform: rotateZ(360deg);
-        transition: all 500ms;
-        cursor: pointer;
-    }
+#projectItemControllers {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
 
-    #projectItemControllers {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-    }
+.slideButtons {
+    width: 40px;
+    margin: 0.5rem;
+    z-index: 12;
+    cursor: pointer;
+}
 
-    .slideButtons {
-        width: 40px;
-        margin: 0.5rem;
-        z-index: 12;
-        cursor: pointer;
-    }
+#previousButton {
+    transform: rotate(180deg);
+}
 
-    #previousButton {
-        transform: rotate(180deg);
-    }
+.slideButtons:hover {
+    filter: sepia(79%) saturate(658%) hue-rotate(100deg) brightness(88%)
+    contrast(95%);
+}
+.ViewAssignment{
+    position: relative;
+    top: 51px;
+    width: 200px;
+    height: 28px;
+    opacity: 100%;
+    border-radius: 10px;
+    font-family: Arial;
+    text-align: center;
+}
 
-    .slideButtons:hover {
-        filter: sepia(79%) saturate(658%) hue-rotate(100deg) brightness(88%) contrast(95%);
-    }
+.ViewAssignment:hover{
+    background-color: #7ecb79;
+    font-weight: bold;
+    color: #7ecb79;
+    box-shadow: 0px 1px 8px 3px white;
+    border: 3px solid #ffffff;
+    opacity: 90%;
 
-    .ViewAssignment {
-        position: relative;
-        top: 51px;
-        width: 200px;
-        height: 28px;
-        opacity: 100%;
-        border-radius: 10px;
-        font-family: Arial;
-        text-align: center;
-    }
+}
+/* contact */
+footer {
+    background: #701C7D;
+    font-size: .9rem;
+    margin-top: 7rem;
+    padding: 3rem 0;
+    text-align: center;
+}
+.footer__logo {
+    display: inline-block;
+    font-size: 2rem;
+    font-weight: 500;
+    margin-bottom: 2rem;
+}
+footer a {
+    color: var(--color-bg);
+}
 
-    .ViewAssignment:hover {
-        background-color: #7ecb79;
-        font-weight: bold;
-        color: #7ecb79;
-        box-shadow: 0px 1px 8px 3px white;
-        border: 3px solid #ffffff;
-        opacity: 90%;
+a {
+    color: #4db5ff;
+    color: var(--color-primary);
+    transition: all .4s ease;
+    transition: var(--transition);
+}
 
-    }
+.footer__socials, .permalinks {
+    display: flex;
+    justify-content: center;
+}
 
-    /*------------------------------------------------------------------------*/
-    /*  gallery section */
-    main > section:nth-child(5) {
-        position: relative;
-        top: 0;
-        width: 100%;
-        background: #eeeeee;;
-    }
+.permalinks {
+    flex-wrap: wrap;
+    gap: 2rem;
+    margin: 0 auto 3rem;
+}
+.footer__socials {
+    gap: 1rem;
+    margin-bottom: 4rem;
+}
 
-    /**
-    * title in gallery section
-    */
-    main > section:nth-child(5) > section:first-child {
-        position: relative;
-        text-align: center;
-        padding-top: 0;
-    }
+.footer__socials, .permalinks {
+    display: flex;
+    justify-content: center;
+}
+.footer__socials a {
+    background: var(--color-bg);
+    border: 1px solid transparent;
+    border-radius: 0.7rem;
+    color: var(--color-white);
+    display: flex;
+    padding: 0.8rem;
+}
+svg {
+    stroke: currentcolor;
+    fill: currentcolor;
+    stroke-width: 0;
+    height: 1em;
+    width: 1em;
+}
+.footer__copyright {
+    color: #dddddd;
+    margin-bottom: 4rem;
+}
+/*------------------------------------------------------------------------*/
+/*  gallery section */
 
-    main > section:nth-child(5) > section:first-child > h1 {
-        font-family: Ubuntu, sans-serif;
-        font-size: 50px;
-        text-align: center;
-        margin-top: 5px;
-        margin-bottom: 7px;
-        padding-bottom: 18px;
-    }
+main > section:nth-child(5) {
+    position: relative;
+    top: 0;
+    width: 100%;
+    background: #eeeeee;;
+}
 
-    /**
-    * title underline in gallery section
-    */
-    main > section:nth-child(5) > section:first-child > h1::before {
-        content: "";
-        position: absolute;
-        display: block;
-        width: 120px;
-        height: 2px;
-        background: #ddd;
-        bottom: 2px;
-        left: calc(50% - 60px);
-        border-radius: 2px;
-    }
+/**
+* title in gallery section
+*/
+main > section:nth-child(5) > section:first-child {
+    position: relative;
+    text-align: center;
+    padding-top: 0;
+}
+
+main > section:nth-child(5) > section:first-child > h1 {
+    font-family: Ubuntu, sans-serif;
+    font-size: 50px;
+    text-align: center;
+    margin-top: 5px;
+    margin-bottom: 7px;
+    padding-bottom: 18px;
+}
+
+/**
+* title underline in gallery section
+*/
+main > section:nth-child(5) > section:first-child > h1::before {
+    content: "";
+    position: absolute;
+    display: block;
+    width: 120px;
+    height: 2px;
+    background: #ddd;
+    bottom: 2px;
+    left: calc(50% - 60px);
+    border-radius: 2px;
+}
 
 
-    /**
-    * added section positions gallery section
-    */
-    main > section:nth-child(5) > section:nth-child(2) {
-        position: relative;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        margin-top: 60px;
-        padding-bottom: 7px;
-    }
+/**
+* added section positions gallery section
+*/
+main > section:nth-child(5) > section:nth-child(2) {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 60px;
+    padding-bottom: 7px;
+}
 
-    /**
-    * added section display type grid
-    */
-    main > section:nth-child(5) > section:nth-child(2) > section:first-child {
-        width: 1100px;
-        margin-left: 70px;
-        margin-right: 70px;
-        height: 600px;
-        display: grid;
-        grid-template-rows: repeat(3, 1fr);
-        grid-template-columns: repeat(4, 1fr);
-        gap: 9px;
-    }
+/**
+* added section display type grid
+*/
+main > section:nth-child(5) > section:nth-child(2) > section:first-child {
+    width: 1100px;
+    margin-left: 70px;
+    margin-right: 70px;
+    height: 600px;
+    display: grid;
+    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: repeat(4, 1fr);
+    gap: 9px;
+}
 
-    /**
-    * customized all divs
-    */
-    main > section:nth-child(5) > section:nth-child(2) > section:first-child > div {
-        box-shadow: 1px 2px 3px 1px rgba(0, 0, 0, 0.68);
-        border-radius: 15px;
-    }
+/**
+* customized all divs
+*/
+main > section:nth-child(5) > section:nth-child(2) > section:first-child > div {
+    box-shadow: 1px 2px 3px 1px rgba(0, 0, 0, 0.68);
+    border-radius: 15px;
+}
 
-    /**
-     * Customized 01 Image
-     */
-    main > section:nth-child(5) > section:nth-child(2) > section:first-child > div:first-child {
-        grid-row: 1/2;
-        grid-column: 1/3;
-        background: url("../image/gallery/img_1.png") center;
-        background-size: cover;
-    }
+/**
+ * Customized 01 Image
+ */
+main > section:nth-child(5) > section:nth-child(2) > section:first-child > div:first-child {
+    grid-row: 1/2;
+    grid-column: 1/3;
+    background: url("../image/gallery/img_1.png") center;
+    background-size: cover;
+}
 
-    /**
-     * Customized 02 Image
-     */
-    main > section:nth-child(5) > section:nth-child(2) > section:first-child > div:nth-child(2) {
-        background: url("../image/gallery/img_2.jpg") center;
-        background-size: cover;
-    }
+/**
+ * Customized 02 Image
+ */
+main > section:nth-child(5) > section:nth-child(2) > section:first-child > div:nth-child(2) {
+    background: url("../image/gallery/img_2.jpg") center;
+    background-size: cover;
+}
 
-    /**
-     * Customized 03 Image grid-column and grid-row
-     */
-    main > section:nth-child(5) > section:nth-child(2) > section:first-child > div:nth-child(3) {
-        grid-column: 4/5;
-        grid-row: 1/4;
-        background: url("../image/gallery/img_4.jpg") center;
-        background-size: cover;
-    }
+/**
+ * Customized 03 Image grid-column and grid-row
+ */
+main > section:nth-child(5) > section:nth-child(2) > section:first-child > div:nth-child(3) {
+    grid-column: 4/5;
+    grid-row: 1/4;
+    background: url("../image/gallery/img_4.jpg") center;
+    background-size: cover;
+}
 
-    /**
-     * Customized 04 Image
-    */
-    main > section:nth-child(5) > section:nth-child(2) > section:first-child > div:nth-child(4) {
-        background: url("../image/gallery/img_3.jpg") center;
-        background-size: cover;
-    }
+/**
+ * Customized 04 Image
+*/
+main > section:nth-child(5) > section:nth-child(2) > section:first-child > div:nth-child(4) {
+    background: url("../image/gallery/img_3.jpg") center;
+    background-size: cover;
+}
 
-    /**
-     * Customized 05 Image
-     */
-    main > section:nth-child(5) > section:nth-child(2) > section:first-child > div:nth-child(5) {
-        background: url("../image/gallery/img_5.jpg") center;
-        background-size: cover;
-    }
+/**
+ * Customized 05 Image
+ */
+main > section:nth-child(5) > section:nth-child(2) > section:first-child > div:nth-child(5) {
+    background: url("../image/gallery/img_5.jpg") center;
+    background-size: cover;
+}
 
-    /**
-     * Customized 06 Image
-     */
-    main > section:nth-child(5) > section:nth-child(2) > section:first-child > div:nth-child(6) {
-        background: url("../image/gallery/img_6.jpg") center;
-        background-size: cover;
-    }
+/**
+ * Customized 06 Image
+ */
+main > section:nth-child(5) > section:nth-child(2) > section:first-child > div:nth-child(6) {
+    background: url("../image/gallery/img_6.jpg") center;
+    background-size: cover;
+}
 
-    /**
-     * Customized 07 Image
-     */
-    main > section:nth-child(5) > section:nth-child(2) > section:first-child > div:nth-child(7) {
-        background: url("../image/gallery/img_7.jpeg") center;
-        background-size: cover;
-    }
+/**
+ * Customized 07 Image
+ */
+main > section:nth-child(5) > section:nth-child(2) > section:first-child > div:nth-child(7) {
+    background: url("../image/gallery/img_7.jpeg") center;
+    background-size: cover;
+}
 
-    /**
-     * Customized 08 Image grid-column and grid-row
-     */
-    main > section:nth-child(5) > section:nth-child(2) > section:first-child > div:nth-child(8) {
-        grid-column: 2/4;
-        grid-row: 3/4;
-        background: url("../image/gallery/img_8.jpg") center;
-        background-size: cover;
-    }
+/**
+ * Customized 08 Image grid-column and grid-row
+ */
+main > section:nth-child(5) > section:nth-child(2) > section:first-child > div:nth-child(8) {
+    grid-column: 2/4;
+    grid-row: 3/4;
+    background: url("../image/gallery/img_8.jpg") center;
+    background-size: cover;
+}
 
-    /**
-     * Added Hover Effects
-     */
-    main > section:nth-child(5) > section:nth-child(2) > section:first-child > div:hover {
-        transition: all 0.5s ease;
-        -webkit-transform: scale(0.96);
-        transform: scale(0.96);
-        box-shadow: 1px 1px 15px 1px rgba(0, 0, 0, 0.68);
-        cursor: pointer;
-    }
+/**
+ * Added Hover Effects
+ */
+main > section:nth-child(5) > section:nth-child(2) > section:first-child > div:hover {
+    transition: all 0.5s ease;
+    -webkit-transform: scale(0.96);
+    transform: scale(0.96);
+    box-shadow: 1px 1px 15px 1px rgba(0, 0, 0, 0.68);
+    cursor: pointer;
 }
