--- a/assets/style/styles.css
+++ b/assets/style/styles.css
@@ -980,9 +980,164 @@ i.fab {
     box-shadow: 0px 1px 8px 3px white;
     border: 3px solid #ffffff;
     opacity: 90%;
-
 }
-/* contact */
+
+
+/*  footer
+   ========================================================================== */
+/*  footer
+   ========================================================================== */
+
+footer {
+    position: relative;
+    width: 100%;
+    background: #701C7D;
+}
+
+/**
+* customized h1 in footer
+*/
+footer > section:first-child > div:first-child > h2:first-child {
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 50px;
+    color: #FFFFFF;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+/**
+* customized span in footer
+*/
+footer > section:first-child > div:first-child > h2:first-child > span {
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 50px;
+    color: #7ecb79;
+}
+
+/**
+* added section display type flex and justify-content center in footer section
+*/
+footer > section:first-child {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+/**
+* added social media icons justify-content space-evenly in footer section
+*/
+footer > section:first-child > div:first-child > nav:nth-child(2) {
+    display: flex;
+    justify-content: center;
+    gap: 25px;
+}
+
+/**
+* added section display type flex and flex-direction column in footer section
+*/
+footer > section:first-child > div:first-child {
+    display: flex;
+    flex-direction: column;
+}
+
+/**
+* added section added gap and justify-content space-evenly in footer section
+*/
+footer > section:first-child > div:first-child > nav:nth-child(3) > ul:first-child {
+    display: flex;
+    justify-content: space-evenly;
+    gap: 37px
+}
+
+/**
+* customized social media icons covers in footer
+*/
+footer > section:first-child > div:first-child > nav:nth-child(2) > div {
+    width: 50px;
+    height: 50px;
+    background: transparent;
+    box-shadow: -4px -4px 12px rgba(236, 236, 236, 0.1), 4px 4px 12px rgb(0, 0, 0);
+    border-radius: 14px;
+    text-align: center;
+    cursor: pointer;
+}
+
+/**
+* added social media icons hover effects in footer
+*/
+footer > section:first-child > div:first-child > nav:nth-child(2) > div:hover {
+    transition: all 0.5s ease;
+    -webkit-transform: scale(1.10);
+    transform: scale(1.10);
+}
+
+footer > section:first-child > div:first-child > nav:nth-child(2) > div:hover > a > i:hover {
+    transition: all 0.5s ease;
+    color: #7ecb79 !important;
+}
+
+/**
+* customized social media icons and added color in footer section
+*/
+footer > section:first-child > div:first-child > nav:nth-child(2) > div > a > i {
+    font-size: 2.00em;
+    color: #909597;
+    padding-top: 10px;
+    cursor: pointer;
+}
+
+/**
+* added list color and font size in footer section
+*/
+footer > section:first-child > div:first-child > nav:nth-child(3) > ul:first-child > li {
+    font-family: 'Poppins', sans-serif;
+    font-size: 16px;
+    cursor: pointer;
+    list-style: none;
+}
+
+footer > section:first-child > div:first-child > nav:nth-child(3) > ul:first-child > li > a {
+    line-height: 20px;
+    text-decoration: none;
+    transition: 0.3s all;
+    color: #FFFFFF;
+}
+
+/**
+* added hover menu list in footer section
+*/
+footer > section:first-child > div:first-child > nav:nth-child(3) > ul:first-child > li > a:hover {
+    color: #7ecb79;
+    transition: 0.5s all;
+}
+
+/**
+* customized copyrights section in footer
+*/
+footer > section:nth-child(3) {
+    background: #8a0583;
+    text-align: center;
+}
+
+/**
+* added color copyrights section text in footer
+*/
+footer > section:nth-child(3) > small:first-child {
+    color: #D3D3D3;
+}
+
+#aboutCube2 {
+    display: none;
+}
+
+footer > section:first-child > div:first-child > h2:nth-child(4) {
+    display: none;
+}
+
+footer > section:first-child > div:first-child > h2:nth-child(4) > span {
+    display: none;
+}
+
 
 /*------------------------------------------------------------------------*/
 /*  gallery section */
