--- a/assets/style/styles.css
+++ b/assets/style/styles.css
@@ -991,11 +991,31 @@ i.fab {
 */
 #contact {
     display: flex;
-    margin-top: 90px;
+    margin-top: 60px;
     align-items: center;
     justify-content: center;
+    position: relative;
+    margin-bottom: 50px;
+    height: 40vh;
 }
+#conTopic{
+    margin-top: 30px;
+    text-align: center;
+    font-family: "Poppins", sans-serif;
+    color: black;
+}
+.top{
+    font-size: 50px;
+    font-weight: 600;
+}
+.h4{
+    font-family: "Poppins", sans-serif;
+    color: black;
+    font-size: 50px;
+    margin: 0px 0px 13px;
+    text-align: center;
 
+}
 /**
 * contact details justify-content space-evenly in contact section
 */
@@ -1048,6 +1068,7 @@ footer {
     position: relative;
     width: 100%;
     background: #701C7D;
+    height: 30vh;
 }
 
 /**
@@ -1058,7 +1079,8 @@ footer > section:first-child > div:first-child > h2:first-child {
     font-size: 50px;
     color: #FFFFFF;
     text-align: center;
-    margin-bottom: 20px;
+    margin-top: 15px;
+
 }
 
 /**
