--- a/assets/style/styles.css
+++ b/assets/style/styles.css
@@ -27,11 +27,12 @@
 }
 header {
     position: fixed;
-    background: #FFFFFF;
+    background: linear-gradient(to right, #F9FAFB, #7ecb79, #701C7D);
     width: 100%;
     top: 0;
     height: 73px;
     z-index: 999;
+    opacity: 85%;
 }
 
 #blog{
@@ -67,7 +68,7 @@ header {
     padding: 10px;
     font-family: 'Poppins', sans-serif !important;
     font-size: 18px;
-    font-weight: 550;
+    font-weight: 600;
 }
 
 .menu ul li a {
@@ -78,11 +79,11 @@ header {
 }
 
 .menu ul li a:hover {
-    color: #7ecb79 ;
+    color: #8a0583 ;
 }
 
 .menu ul li #active {
-    color: rgba(126, 203, 121, 0.74);
+    color: #8a0583;
 }
 
 .hover-line::after {
@@ -124,7 +125,7 @@ main > section:nth-child(1) {
     position: relative;
     background-image: url("../image/Home Other HD Wallpapers Green Purple White Simple Background.jpg");
     width: 100%;
-    height: 80vh;
+    height: 90vh;
 }
 
 
