--- a/assets/style/styles.css
+++ b/assets/style/styles.css
@@ -218,7 +218,9 @@ main > section:nth-child(1) > section > div:first-child > aside:nth-child(1) > b
     transition-delay: 0s;
     transition-property: all;
     transition-duration: 0.5s;
-
+}
+main > section:nth-child(1) > section > div:first-child > aside:nth-child(1) > button:nth-child(4) a{
+    color: #000000;
 }
 
 
@@ -249,7 +251,7 @@ main > section:nth-child(1) > section > div:first-child > aside:nth-child(1) > s
     left: 23%;
     top: 23%;
     font-size: 2.40em;
-    color: #FFFFFF;
+    color: #000000;
     cursor: pointer;
 }
 
